<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".databaseActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/add_to_database"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="13dp"
                android:text="@string/add_to_db"
                android:textAlignment="center"
                android:textColor="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_number_text2"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_to_database"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@id/product_name_input"
                android:text="Full Name" />

            <TextView
                android:id="@+id/id_number_text3"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name_input"
                android:layout_marginTop="37dp"
                android:layout_marginRight="19dp"
                android:layout_toLeftOf="@id/product_description_input"
                android:text="Postal Code" />

            <TextView
                android:id="@+id/phone_no_input"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_number_text3"
                android:layout_marginTop="36dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/item_price_input"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/product_name_input"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_to_database"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="9dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/product_description_input"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name_input"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/item_price_input"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_description_input"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="11dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/submit_product_btn"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_price_input"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="141dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="110dp"
                android:onClick="AddToTable"
                android:text="@string/submit_btn" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/database_view"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/textView3"
            android:layout_weight="1"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:background="#0079D6"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="68dp"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:textColor="#FFC107"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="89dp"
                        android:layout_height="match_parent"
                        android:text="@string/postal_coode"
                        android:textColor="#FFC107"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:text="@string/phone_number"
                        android:textColor="#FFC107"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action"
                        android:textColor="#FFC107"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DAE8FC"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pierre Math."
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:text="4587956"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+12546698575"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="deleteRow"
                        android:text="Delete"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pierre Math."
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4587956"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:text="+12546698575"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="deleteRow"
                        android:text="Delete"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </TableRow>

            </TableLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>